# remanon

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml
app/adapter/: contract_b_client.py  digest.py  prompts.py
app/agents/: base.py  correlator_agent.py  hunter_agent.py  reporter_agent.py  topology_agent.py  triage_agent.py
app/config/: evidence.py  hardware.py
app/dataplane/: handles.py  ingest.py  normalizer.py  parser.py  replayer.py  store.py
app/orchestrator/: orchestrator.py  report.py  run_demo.py
contracts/: contract_a.py
contracts/artifact_schemas/: correlator.json  hunter.json  reporter.json  topology.json  triage.json
core/: budgeter.py  generator.py  materializer.py  memory_model.py  metrics.py  registry.py  residency.py
dashboard/: placeholder.py  recorder.py  server.py
dashboard/showcase/: index.html  research.html
dashboard/static/: index.html
deploy/: docker-compose.yml
deploy/mock_engine/: main.py
docs/: ARCHITECTURE.md
docs/design/: living-city-reference.html
docs/evidence/: D03_budget_sheet.md  golden_experiment_prefix_reuse.txt  kv_and_hitrate.txt  prefix_reuse.txt  vram_after.txt  vram_before.txt
tests/: conftest.py  test_core_contracts.py  test_dashboard.py  test_dataplane.py  test_honesty.py  test_hybrid_live.py  test_ingest_idempotent_and_full.py  test_multi_system.py  test_orchestrator.py  test_recorder.py  test_report.py  test_smoke.py
